tests/fixtures/invalid/pow_set_bool.py
# Cannot call pow() with Set[int], Bool
x = pow({1, 2, 3}, True)
